--- a/PD-3DCNN.ipynb
+++ b/PD-3DCNN.ipynb
@@ -35,7 +35,7 @@
     "\n",
     "for x in range(len(scans[:0])): #goes through each patient in the list\n",
     "    for i in range(scans[x].pixel_array.shape[0]): #goes through each scan (91 total)\n",
-    "        print(x,i)\n",
+    "        #print(x,i)\n",
     "        plt.imshow(scans[x].pixel_array[i,:,:], cmap = 'gray')\n",
     "        plt.show()\n",
     "\n",
@@ -59,7 +59,7 @@
     "scanspa = [] #list to hold pixel arrays from dicom files\n",
     "for x in range(len(scans)):\n",
     "    scanspa.append(scans[x].pixel_array)\n",
-    "    scanspa.append(np.flip(scans[x].pixel_array, axis = 2)) #flips scans horizontally for data augmentation\n",
+    "    #scanspa.append(np.flip(scans[x].pixel_array, axis = 2)) #flips scans horizontally for data augmentation\n",
     "    \n",
     "print(len(scanspa))"
    ]
