--- a/3D-CNN Model.ipynb
+++ b/3D-CNN Model.ipynb
@@ -27,7 +27,7 @@
         "from google.colab import drive\n",
         "drive.mount('/content/drive')"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -56,8 +56,17 @@
         "from sklearn.metrics import confusion_matrix\n",
         "from sklearn.model_selection import KFold, StratifiedKFold"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "T5o-iILY6Om0"
+      },
+      "source": [
+        "Import Data"
+      ]
     },
     {
       "cell_type": "code",
@@ -98,6 +107,15 @@
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "uAAIq3WF6Y21"
+      },
+      "source": [
+        "Train/Test Split"
+      ]
     },
     {
       "cell_type": "code",
@@ -188,6 +206,15 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "AOUh32xD6gHB"
+      },
+      "source": [
+        "Define 3D-CNN"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "LnQRIigb2Y_s"
@@ -201,7 +228,7 @@
         "validation_split = 0.2\n",
         "verbosity = 1"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -232,7 +259,7 @@
         "\n",
         "  return model"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -246,8 +273,17 @@
         "              optimizer=keras.optimizers.Adam(lr=learning_rate),\n",
         "              metrics=['accuracy'])"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "-ZdTwnTR6ki_"
+      },
+      "source": [
+        "Model Training & Results"
+      ]
     },
     {
       "cell_type": "code",
@@ -267,7 +303,7 @@
         "                    validation_split=validation_split,\n",
         "                    callbacks=[callback])"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -326,7 +362,7 @@
         "print(tn, fp, fn, tp)\n",
         "#print(np.around(pred,2))"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -364,7 +400,7 @@
         "plt.gca().set_ylim(0,1)\n",
         "plt.show()"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -379,6 +415,15 @@
             "needs_background": "light"
           }
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "1RW1DsN96vTc"
+      },
+      "source": [
+        "10-Fold Cross Validation"
       ]
     },
     {
